[package]
name = "speedy2d-fltk-mini-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
fltk = { version = "1.0.21", features = ["enable-glwindow"] }
speedy2d = { version = "1.0.7", git = "https://github.com/QuantumBadger/Speedy2D", default-features = true }
gl = "0.14"
image = "0.23.14"
dyn-clone = "1.0.4"

winapi = {version = "0.3", features = ["wincon", "winuser"]}